# memi-sk

./: .gitignore  README.md  pyproject.toml
deploy/: memi-sk-webhook.service  memi-sk.service  setup.sh  webhook.py
memi_sk/: app.py
memi_sk/categories/: jedla.py  kraje.py  ludia.py  mesta.py  pamiatky.py  rastliny.py  rieky.py  zvierata.py
memi_sk/providers/: __init__.py  categories.py
